1999-08-17  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-view.el (mime-preview-original-major-mode): Don't use
	`get-text-property' at the end of the buffer.

1999-08-02  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-view.el (mime-preview-follow-current-entity):
	Don't use `mime-entity-buffer'.

1999-05-17  KOSEKI Yoshinori  <kose@yk.NetLaputa.ne.jp>

	* mime-pgp.el (mime-verify-application/pgp-signature): Specify the
	name of `sig-file' explicitly for `mime-pgp-check-signature'.
	(mime-pgp-check-signature): Accept new arg `sig-file' and feed its
	value to the verify command.

1999-07-29  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-play.el (mime-play-entity): Get media-type from situation
	instead of entity; display prompt and call `mime-save-content' if
	method is not found.
	(mime-detect-content): Call `mime-play-entity' even if media-type
	specification is not found in `mime-magic-type-alist'.

1999-07-28  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-view.el (mime-view-entity-title): Use
	`mime-entity-read-field' instead of `mime-read-field'.
	(mime-display-message): Use `major-mode' of
	mime-entity-header-buffer as the default value of
	original-major-mode.

	* mime-play.el (mime-entity-safe-filename): Use
	`mime-entity-read-field' instead of `mime-read-field'.
	(mime-view-message/rfc822): New implementation.

	* mime-pgp.el (mime-add-application/pgp-keys): Use
	`mime-entity-number' instead of `mime-raw-point-to-entity-number'.

	* mime-partial.el
	(mime-combine-message/partial-pieces-automatically): Use
	`mime-entity-read-field' instead of `mime-read-field'.

	* mime-bbdb.el (mime-bbdb/update-record): Use
	`mime-entity-read-field' instead of `mime-read-field'; use
	`mime-entity-fetch-field' instead of `mime-fetch-field'.

1999-07-28  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-view.el (mime-raw-find-entity-from-point): Deleted.
	(mime-raw-buffer): Deleted.
	(mime-preview-original-major-mode): Add new optional argument